change to Iran meetup

--- a/_includes/event.html
+++ b/_includes/event.html
@@ -28,7 +28,9 @@
   </em></p>
   {% endif %}
 
+  {% comment %}
   {% include location.html location=event.location %}
+  {% endcomment %}
 
   {% include event-links.html event=event %}
 </div>
