--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,13 +9,13 @@
     </nav>
     <aside class="external-links">
       <p>
-        join us on <a href="http://www.meetup.com/{{ site.author.meetup }}" rel="me">Meetup.com</a>
+        join us on <a href="http://t.me/{{ site.author.telegram }}" rel="me">Telegram</a>
       </p>
       <p>
         follow us <a href="https://twitter.com/{{ site.author.twitter }}" rel="me">on Twitter</a>
       </p>
       <p>
-        contribute to this site <a href="{{ site.source_url }}">on GitHub</a>
+        contribute to this site <a href="https://github.com/{{ site.source_repo }}">on GitHub</a>
       </p>
     </aside>
   </div>
