--- a/_includes/talk-list.html
+++ b/_includes/talk-list.html
@@ -15,6 +15,9 @@
           {% if talk.speaker.framagit %}<a class="talk-speaker-github" itemprop="sameAs" href="https://framagit.org/{{talk.speaker.framagit}}" title="@{{talk.speaker.framagit}} on FramaGit">
             {% include logo-github.html %}
           </a>{% endif %}
+          {% if talk.speaker.linkedin %}<a class="talk-speaker-linkedin" itemprop="sameAs" href="https://linkedin.com/in/{{talk.speaker.linkedin}}" title="@{{talk.speaker.linkedin}} on LinkedIn">
+            {% include logo-linkedin.html %}
+          </a>{% endif %}
           {% if talk.slides %}
             &mdash; <a itemprop="isBasedOnUrl" href="{{ talk.slides }}">Slides</a>
           {% endif %}
