add `/careers` page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,11 @@
       <p>
         follow us <a href="https://twitter.com/{{ site.author.twitter }}" rel="me">on Twitter</a>
       </p>
+      <p style="display: inline;">
+        Checkout Rust <a href="/careers">careers</a>
+        <p class="badge">{{ site.data.careers | size }}</p>
+        in iran 🇮🇷
+      </p>
       <p>
         contribute to this site <a href="https://github.com/{{ site.source_repo }}">on GitHub</a>
       </p>
