Translate and make RTL

--- a/_includes/event-links.html
+++ b/_includes/event-links.html
@@ -3,8 +3,9 @@
 {% if event.links.size > 0 %}
 <div class="event-links">
   <p>
-    This event was also announced on:
+    این رویداد در لینک های زیر نیز منتشر شده است:
   </p>
+
   <ul>
   {% for link in event.links %}
     <li>
