--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   {% include head.html %}
   <body>
-    {% include header.html variant=page.header-variant %}
+    {% include header.html %}
 
     {{ content }}
 
