--- a/_sass/_text.scss
+++ b/_sass/_text.scss
@@ -1,8 +1,79 @@
-$body-font: "Fira Sans";
-$body-font-fallback: "Source Sans Pro", Roboto, "Droid Sans", Helvetica, Arial, sans-serif;
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-Thin.woff2') format('woff2');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-ExtraLight.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('assets/fonts/Vazirmatn-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-ExtraBold.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Vazirmatn;
+  src: url('/assets/fonts/Vazirmatn-Black.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+$body-font: Vazirmatn, "Fira Sans", "Source Sans Pro", Roboto, "Droid Sans", Helvetica, Arial, sans-serif;
 
 body, html {
-  font-family: $body-font-fallback;
+  font-family: $body-font;
   font-size: 18px;
   line-height: 1.3;
   color: $color-fg;
@@ -10,7 +81,7 @@ body, html {
 
 html.wf-firasans-n4-active {
   &, body {
-    font-family: $body-font, $body-font-fallback;
+    font-family: $body-font;
   }
 }
 
