--- a/_sass/_template.scss
+++ b/_sass/_template.scss
@@ -1,10 +1,15 @@
 body {
   background-color: $color-bg;
   color: $color-fg;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .page-home,
 article.page,
 article.page-event {
   @extend %row;
+  flex: 1;
+  min-width: $max-width;
 }
