fix text and update telegram group id

--- a/_includes/event.html
+++ b/_includes/event.html
@@ -18,7 +18,7 @@
     </ol>
     {% elsif include.call_for_talks %}
     <p><em>
-            در حال حاظر دنبال ارائه هستیم!
+            در حال حاضر دنبال ارائه هستیم!
 
             {% if event.links['برنامه‌ریزی'] %}
             <a href="{{ event.links['برنامه‌ریزی'] }}">به بحث بپیوندید!</a>
